--- a/index.html
+++ b/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test project</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>Lorem ipsum dolor sit amet.</h1>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias, cum nostrum nihil quod expedita laboriosam praesentium odit eligendi nemo exercitationem cupiditate suscipit numquam, blanditiis quidem ullam sunt at provident.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias, cum nostrum nihil quod expedita
+        laboriosam praesentium odit eligendi nemo exercitationem cupiditate suscipit numquam, blanditiis quidem ullam
+        sunt at provident.
     </p>
-    <hr>
-    <hr>
+    </hr>
+    </hr>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sapiente enim placeat. Quibusdam ullam voluptate temporibus aperiam esse consectetur, at assumenda dolor dolorem? Enim commodi dignissimos ex autem magnam perspiciatis?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sapiente enim placeat. Quibusdam ullam voluptate
+        temporibus aperiam esse consectetur, at assumenda dolor dolorem? Enim commodi dignissimos ex autem magnam
+        perspiciatis?
     </p>
-    <hr>
-    <hr>
+    </hr>
+    </hr>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sapiente enim placeat. Quibusdam ullam voluptate temporibus aperiam esse consectetur, at assumenda dolor dolorem? Enim commodi dignissimos ex autem magnam perspiciatis?
-    </p> <hr>
-    <hr>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sapiente enim placeat. Quibusdam ullam voluptate
+        temporibus aperiam esse consectetur, at assumenda dolor dolorem? Enim commodi dignissimos ex autem magnam
+        perspiciatis?
+    </p>
+    </hr>
+    </hr>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sapiente enim placeat. Quibusdam ullam voluptate temporibus aperiam esse consectetur, at assumenda dolor dolorem? Enim commodi dignissimos ex autem magnam perspiciatis?
-    </p> <hr>
-    <hr>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sapiente enim placeat. Quibusdam ullam voluptate
+        temporibus aperiam esse consectetur, at assumenda dolor dolorem? Enim commodi dignissimos ex autem magnam
+        perspiciatis?
+    </p>
+    </hr>
+    </hr>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sapiente enim placeat. Quibusdam ullam voluptate temporibus aperiam esse consectetur, at assumenda dolor dolorem? Enim commodi dignissimos ex autem magnam perspiciatis?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sapiente enim placeat. Quibusdam ullam voluptate
+        temporibus aperiam esse consectetur, at assumenda dolor dolorem? Enim commodi dignissimos ex autem magnam
+        perspiciatis?
     </p>
 </body>
+
 </html>
