--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         temporibus aperiam esse consectetur, at assumenda dolor dolorem? Enim commodi dignissimos ex autem magnam
         perspiciatis?
     </p>
+
+    <script src="app.js"></script>
 </body>
 
 </html>
